// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Body should render with default styles 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
}

<p
  class="circuit-0"
>
  Body
</p>
`;

exports[`Body should render with size one 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
}

<p
  class="circuit-0"
>
  one text
</p>
`;

exports[`Body should render with size two 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
}

<p
  class="circuit-0"
>
  two text
</p>
`;
